--- a/App-HRIS/package.json
+++ b/App-HRIS/package.json
@@ -11,6 +11,9 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@fullcalendar/core": "^6.1.8",
+        "@fullcalendar/daygrid": "^6.1.8",
+        "@fullcalendar/interaction": "^6.1.8",
         "fullcalendar": "^6.1.8"
     }
 }
